src/kudu/rpc/transfer.cc
@@ -160,6 +160,7 @@ OutboundTransfer::OutboundTransfer(int32_t call_id,
     cur_offset_in_slice_(0),
     callbacks_(callbacks),
     call_id_(call_id),
+    started_(false),
     aborted_(false) {
 
   n_payload_slices_ = n_payload_slices;
@@ -186,6 +187,7 @@ void OutboundTransfer::Abort(const Status &status) {
 Status OutboundTransfer::SendBuffer(Socket &socket) {
   CHECK_LT(cur_slice_idx_, n_payload_slices_);
 
+  started_ = true;
   int n_iovecs = n_payload_slices_ - cur_slice_idx_;
   struct iovec iovec[n_iovecs];
   {
@@ -233,7 +235,7 @@ Status OutboundTransfer::SendBuffer(Socket &socket) {
 }
 
 bool OutboundTransfer::TransferStarted() const {
-  return cur_offset_in_slice_ != 0 || cur_slice_idx_ != 0;
+  return started_;
 }
 
 bool OutboundTransfer::TransferFinished() const {
